# tabular-bank

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  publish-pypi.yml
examples/: README.md  generate_datasets.py  run_benchmark.py  run_meta_eval.py  run_single_dataset.py
examples/problems/: README.md  manifest.json
examples/problems/customer-retention-risk/: README.md  data_dictionary.csv  metadata.json  sample_submission.csv  starter.py  test.csv  train.csv
examples/problems/customer-retention-risk/solution/: test_labels.csv
examples/problems/store-demand-forecast/: README.md  data_dictionary.csv  metadata.json  sample_submission.csv  starter.py  test.csv  train.csv
examples/problems/ticket-priority-routing/: README.md  data_dictionary.csv  metadata.json  sample_submission.csv  starter.py  test.csv  train.csv
examples/scripts/: _bootstrap.py  export_kaggle_style_problems.py  generate_datasets.py  run_benchmark.py  run_contamination_analysis.py  run_full_benchmark.py  run_meta_eval.py  run_scaling_analysis.py  run_single_dataset.py  run_tabarena_benchmark.py
notes/: research-and-design.md  review-idea.md
synthetic_tab/: __init__.py  cli.py  context.py  leaderboard.py  runner.py  tasks.py
synthetic_tab/generation/: __init__.py  dag_builder.py  engine.py  feature_generator.py  generate.py  sampler.py  seed.py
synthetic_tab/templates/: scenarios.py
tabular_bank/: __init__.py  baselines.py  board.py  cli.py  context.py  forecasting.py  leaderboard.py  rounds.py  runner.py  tasks.py
tabular_bank/evaluation/: __init__.py  contamination.py  diagnostics.py  feature_importance.py  meta_eval.py  scaling.py
tabular_bank/generation/: dag_builder.py  engine.py  feature_generator.py  generate.py  missing.py  sampler.py  seed.py  shift.py
tabular_bank/templates/: __init__.py  scenarios.py
tests/: test_baselines.py  test_board.py  test_cli.py  test_contamination.py  test_contamination_analysis.py  test_context.py  test_dag_builder.py  test_diagnostics.py  test_engine.py  test_feature_generator.py  test_feature_importance.py  test_fixes.py  test_forecasting.py  test_irt.py  test_leaderboard.py  test_meta_eval.py  test_missing.py  test_rounds.py  test_runner.py  test_sampler.py  test_scaling.py  test_scenarios.py  test_seed.py  test_shift.py  test_tabarena_integration.py
website/: index.html  styles.css
(+2 files in other folders)
