[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-tab"
version = "0.1.0"
description = "A contamination-proof tabular ML benchmark — drop-in replacement for TabArena with procedurally generated synthetic datasets"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "synthetic-tab contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pgmpy>=0.1.25",
]

[project.optional-dependencies]
benchmark = [
    "tabarena",
    "autogluon.tabular>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
synthetic-tab = "synthetic_tab.cli:main"

[tool.setuptools.packages.find]
include = ["synthetic_tab*"]
